[package]
name = "futhark_syntax"
version = "0.1.0-devel"
edition = "2018"
authors = ["Peter Jin"]
license = "ISC"

[profile.dev]
opt-level = 1
#opt-level = 3
#codegen-units = 1
#incremental = false
codegen-units = 256
incremental = true

[dependencies]
regex-syntax = "0.7"
smol_str = { version = "0.2", default-features = false }
